@@ -1,3 +1,9 @@
+Tue May 18 18:36:39 1999  Steve ROBBINS  <stever@bic.mni.mcgill.ca>
+
+	* MNI/Batch.pm (StartJobAfter): experimental batch interface using
+ 	'-a' option to delay a job.  This really ought to be specified
+	via Batch( job, After => whatever, ... ), like the Spawn interface.
+
 Mon May 17 16:41:18 1999  Steve ROBBINS  <stever@bic.mni.mcgill.ca>
 
 	* t/batch.t: added simple testing of StartJob, QueueCommand,
